# TripSphere

./: Explain.md  README.md  docker-compose.yaml
mysql/: init.sql
trip-attraction-service/: Dockerfile  Taskfile.yaml  buf.gen.yaml  pom.xml
trip-attraction-service/src/main/resources/: application.yaml
trip-chat-service/src/chat/utils/: pagination.py
trip-hotel-service/: Dockerfile  pom.xml
trip-hotel-service/src/main/resources/: application.yaml
trip-itinerary-service/: .dockerignore  Dockerfile  Taskfile.yaml  pom.xml
trip-itinerary-service/src/main/resources/: application.yaml
trip-next-frontend/app/api/[...proxy]/: handler.ts
trip-next-frontend/hooks/: use-attractions.ts  use-auth.ts
trip-note-service/: Dockerfile  Taskfile.yaml  pom.xml
trip-poi-service/: Dockerfile  Taskfile.yaml  pom.xml
trip-review-service/: .env.example  Dockerfile  Taskfile.yaml  go.mod  go.sum
trip-review-service/config/: init.go
trip-review-service/internal/domain/: review.go
trip-review-service/internal/repository/: review_repo.go  review_repo_test.go
trip-review-service/internal/service/: review_service.go
trip-review-service/migrations/: reviews.sql
trip-review-summary/: .env.example  Dockerfile  pyproject.toml
trip-review-summary/src/review_summary/config/: settings.py
trip-review-summary/src/review_summary/index/tasks/: collect_text_units.py
trip-review-summary/src/review_summary/query/context_builder/: conversation_history.py
trip-review-summary/src/review_summary/tokenizer/: tokenizer.py
trip-user-service/: Dockerfile  Taskfile.yaml  buf.gen.yaml  pom.xml
(+107 files in other folders)
